# paper-2021-EAPElasticDist

./: LICENSE  README.md
code/: CMakeLists.txt
code/launcher/exp_nn1_dtw_lb/: analyse_result.py  analyse_result_lbtest.py  generatecmds.py
code/launcher/exp_nn1_elasticdist/: README.md  analyse_result.py  generatecmds.py
code/src/: main.cpp  utils.hpp
code/src/distances/dtw/: cdtw.hpp  dtw.hpp  pruneddtw.hpp  pruneddtw_ea.hpp  wdtw.hpp
code/src/distances/dtw/lowerbounds/: lb_keogh.hpp
code/src/distances/elementwise/: elementwise.hpp
code/src/distances/erp/: erp.hpp
code/src/distances/msm/: msm.hpp
code/src/distances/twe/: twe.hpp
code/src/tseries/: tseries.hpp
code/src/tseries/readers/tsreader/: tsreader.cpp
nnclassification/: CMakeLists.txt
nnclassification/launcher/: parlauncher.py
nnclassification/src/: main.cpp
nnclassification/src/distances/: distances.hpp
nnclassification/src/distances/dtw/: cdtw.hpp  dtw.hpp  pruneddtw.hpp
nnclassification/src/distances/dtw/lowerbounds/: envelopes.hpp  lb_webb.hpp
nnclassification/src/distances/erp/: erp.hpp
nnclassification/src/distances/lcss/: lcss.hpp
nnclassification/src/distances/msm/: msm.hpp
nnclassification/src/distances/twe/: twe.hpp
nnclassification/src/tseries/readers/tsreader/: tsreader.hpp
subsequence/: README.md  main.py
